fixing subplots alignment (#185)
* fixing subplots alignment

* updated version

--- a/src/css/idd.css
+++ b/src/css/idd.css
@@ -629,7 +629,7 @@ table.idd-subplots-table {
 }
 
 div.idd-subplots {
-    display: flex;
+    display: inline-flex;
     justify-content: flex-start;
     align-items: center;
 }
